corpus/abstract_terminal_expression.txt
================================================================================
keyword
================================================================================
Hello: 'hello';
--------------------------------------------------------------------------------

(document
  (parser_rule_statement
    (rule_name_expression
      (id))
    (group_exression
      (cardinality_expression
        (keyword)))))

================================================================================
rule call
================================================================================
Hello: ID<Hello>;
Hello: ID<Hello,Hi>;
Hello: ID<Hello=Hi>;
Hello: ID<Hello=Hi|Hey>;
--------------------------------------------------------------------------------

(document
  (parser_rule_statement
    (rule_name_expression
      (id))
    (group_exression
      (cardinality_expression
        (rule_call_expression
          (id)
          (named_argument_expression
            (parameter_reference))))))
  (parser_rule_statement
    (rule_name_expression
      (id))
    (group_exression
      (cardinality_expression
        (rule_call_expression
          (id)
          (named_argument_expression
            (parameter_reference))
          (named_argument_expression
            (parameter_reference))))))
  (parser_rule_statement
    (rule_name_expression
      (id))
    (group_exression
      (cardinality_expression
        (rule_call_expression
          (id)
          (named_argument_expression
            (id)
            (parameter_reference))))))
  (parser_rule_statement
    (rule_name_expression
      (id))
    (group_exression
      (cardinality_expression
        (rule_call_expression
          (id)
          (named_argument_expression
            (id)
            (disjunction_expression
              (parameter_reference)
              (parameter_reference))))))))

================================================================================
parenthesized element
================================================================================
Hello: 'hello' ('world' '!');
--------------------------------------------------------------------------------

(document
  (parser_rule_statement
    (rule_name_expression
      (id))
    (group_exression
      (cardinality_expression
        (keyword))
      (cardinality_expression
        (parenthesized_element_expression
          (group_exression
            (cardinality_expression
              (keyword))
            (cardinality_expression
              (keyword))))))))
