corpus/comment.txt
================================================================================
line comment
================================================================================
// line comment
entry Hello: 'hello';
--------------------------------------------------------------------------------

(document
  (line_comment)
  (parser_rule_statement
    (rule_name_expression
      (id))
    (group_exression
      (cardinality_expression
        (keyword)))))

================================================================================
block comment single line
================================================================================
/* anothor block comment */
entry Hello: 'hello';
--------------------------------------------------------------------------------

(document
  (block_comment)
  (parser_rule_statement
    (rule_name_expression
      (id))
    (group_exression
      (cardinality_expression
        (keyword)))))

================================================================================
block comment multiple line
================================================================================
/*
 * block comment
 */
entry Hello: 'hello';
--------------------------------------------------------------------------------

(document
  (block_comment)
  (parser_rule_statement
    (rule_name_expression
      (id))
    (group_exression
      (cardinality_expression
        (keyword)))))
