corpus/grammar_statement.txt
================================================================================
grammar
================================================================================
grammar MyLanguage
entry Hello: 'hello';
--------------------------------------------------------------------------------

(document
  (grammar_statement
    (id))
  (parser_rule_statement
    (rule_name_expression
      (id))
    (group_exression
      (cardinality_expression
        (keyword_expression
          (string))))))

================================================================================
with
================================================================================
grammar MyLanguage
with UsedGrammar, UsedGrammar2
entry Hello: 'hello';
--------------------------------------------------------------------------------

(document
  (grammar_statement
    (id)
    (with_expression
      (id)
      (id)))
  (parser_rule_statement
    (rule_name_expression
      (id))
    (group_exression
      (cardinality_expression
        (keyword_expression
          (string))))))

================================================================================
hidden
================================================================================
grammar MyLanguage
hidden (HiddenToken, HiddenToken2)
entry Hello: 'hello';
--------------------------------------------------------------------------------

(document
  (grammar_statement
    (id)
    (hidden_expression
      (id)
      (id)))
  (parser_rule_statement
    (rule_name_expression
      (id))
    (group_exression
      (cardinality_expression
        (keyword_expression
          (string))))))
