corpus/import_statement.txt
================================================================================
import
================================================================================
import "./example"
entry Hello: 'hello';
--------------------------------------------------------------------------------

(document
  (import_statement
    (string))
  (parser_rule_statement
    (rule_name_expression
      (id))
    (cardinality_expression
      (keyword))))

================================================================================
import with semicolon
================================================================================
import "./example";
entry Hello: 'hello';
--------------------------------------------------------------------------------

(document
  (import_statement
    (string))
  (parser_rule_statement
    (rule_name_expression
      (id))
    (cardinality_expression
      (keyword))))
